--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button>Saiba Mais</button>
             </div>
         </header>
-        <div class="sidebar">
+        <aside class="sidebar">
             <nav>
                 <ul class="menu">
                     <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
@@ -43,7 +43,83 @@
                 <a href="#"><i class="fab fa-github-alt"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
             </div>
-        </div>
+        </aside>
+        <section class="sessao-conhecimentos">
+            <div class="sessao-header">
+                <h1>Conhecimentos</h1>
+            </div>
+            <div class="conhecimentos">
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-html5"></i>
+                        <h3>HTML</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Enim suscipit quidem aperiam? Animi perferendis consequuntur rerum et, 
+                            esse dignissimos quas ratione </p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-css3-alt"></i>
+                        <h3>CSS</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                             Dicta officiis vel enim, blanditiis distinctio laboriosam officia quas
+                              eligendi tempora? </p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fas fa-pencil-alt"></i>
+                        <h3>Design</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                            Mollitia, voluptatibus asperiores? Dolores fuga ex doloremque maiores 
+                            architecto expedita natus, explicabo dicta !</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-js"></i>
+                        <h3>Javascript</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                            Tenetur illo enim optio, quidem excepturi temporibus cumque deserunt.
+                             Unde quibusdam natus libero voluptas nemo.</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-bootstrap"></i>
+                        <h3>Bootstrap</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                            Tenetur illo enim optio, quidem excepturi temporibus cumque deserunt.
+                             Unde quibusdam natus .</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-github"></i>
+                        <h3>Git e GitHub</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                            Tenetur illo enim optio, quidem excepturi temporibus cumque deserunt.
+                             Unde quibusdam natus libero.</p>
+                    </div>
+                </div>
+                <div class="conhecimento-img-wrapper">
+                    <img src="imagens/conhecimentos.png" alt="imagem conhecimento">
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 <script src="script.js"></script>
