:package: novas imgs

--- a/index.html
+++ b/index.html
@@ -120,7 +120,52 @@
                 </div>
             </div>
         </section>
+        <section class="sessao-projetos">
+            <div class="sessao-header">
+                <h1>Projetos</h1>
+            </div>
+            <div class="projetos">
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="imagens/proj1.jpg" alt="imagem do projeto">
+                    </div>
+                    <div class="card-info">
+                        <h2>ToDo List</h2>
+                        <h3>ReactJS</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Ab, numquam deserunt omnis ratione aperiam nulla praesentium? 
+                        Praesentium, quaerat ducimus. Cupiditate.</p>
+                        <button>Saiba Mais</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="imagens/proj2.jpg" alt="imagem do projeto">
+                    </div>
+                    <div class="card-info">
+                        <h2>Projeto DevBarber</h2>
+                        <h3>Javascript</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Ab, numquam deserunt omnis ratione aperiam nulla praesentium? 
+                        Praesentium, quaerat ducimus. Cupiditate.</p>
+                        <button>Saiba Mais</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="imagens/proj3.jpg" alt="imagem do projeto">
+                    </div>
+                    <div class="card-info">
+                        <h2>Maratona</h2>
+                        <h3>HTML, CSS</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Libero, nostrum?</p>
+                        <button>Saiba Mais</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
+    <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
 </html>
