--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                         Ab, numquam deserunt omnis ratione aperiam nulla praesentium? 
                         Praesentium, quaerat ducimus. Cupiditate.</p>
-                        <button>Saiba Mais</button>
+                        <button class="btn">Saiba Mais</button>
                     </div>
                 </div>
                 <div class="card">
@@ -148,7 +148,7 @@
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                         Ab, numquam deserunt omnis ratione aperiam nulla praesentium? 
                         Praesentium, quaerat ducimus. Cupiditate.</p>
-                        <button>Saiba Mais</button>
+                        <button class="btn">Saiba Mais</button>
                     </div>
                 </div>
                 <div class="card">
@@ -160,10 +160,33 @@
                         <h3>HTML, CSS</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Libero, nostrum?</p>
-                        <button>Saiba Mais</button>
+                        <button class="btn">Saiba Mais</button>
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="sessao-contato"> 
+           <div class="contato-wrapper">
+              <div class="contato-left"></div>
+              <div class="contato-right">
+                <h1>Contato</h1>
+                <form>
+                    <div class="input-group">
+                        <input type="text" class="field" id="nome">
+                        <label for="nome" class="field-label">Nome</label>
+                    </div>
+                    <div class="input-group">
+                        <input type="text" class="field" id="email">
+                        <label for="email" class="field-label">E-mail</label>
+                    </div>
+                    <div class="input-group">
+                        <textarea class="field" id="mensagem"></textarea>
+                        <label for="mensagem" class="field-label">Mensagem</label>
+                    </div>
+                    <button type="submit"class="btn btn-submit" >Enviar</button>
+                </form>
+              </div> 
+           </div> 
         </section>
     </div>
     <script src="script.js"></script>
